--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="referrer" content="never">
+    <meta name="theme-color" content="#1abc9c">
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MI-RE-DO</title>
