Update pwa config

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="referrer" content="never">
     <meta name="theme-color" content="#1abc9c">
     <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/logo.png"/> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MI-RE-DO</title>
   </head>
